--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,10 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+thead th.set-order {
+  cursor: pointer;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
