--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,10 @@ thead th.set-order {
   cursor: pointer;
 }
 
+.buttons-bar button {
+  margin: 0 0.3rem;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
